--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,13 +2,135 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validador de CPF e RG</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 350px; /* Largura do container */
+        }
+        h2 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+        input {
+            width: 80%; 
+            padding: 12px; 
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 16px;
+            transition: border-color 0.3s;
+        }
+        input:focus {
+            border-color: #28a745;
+            outline: none;
+        }
+        button {
+            width: 100%;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 12px;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+
+        /* Modal */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background: white;
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 300px;
+        }
+        .modal button {
+            background-color: #007bff;
+            margin-top: 15px;
+            padding: 10px 20px;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .modal button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h2>Digite o CPF ou RG:</h2>
-    <form action="/validar" method="post">
-        <input type="text" name="documento" required>
-        <button type="submit">Validar</button>
-    </form>
+    <div class="container">
+        <h2>Validador de CPF e RG</h2>
+        <input type="text" id="documento" placeholder="Digite o CPF ou RG" required>
+        <button onclick="validarDocumento()">Validar</button>
+    </div>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <h3 id="modal-text"></h3>
+            <button onclick="fecharModal()">OK</button>
+        </div>
+    </div>
+
+    <script>
+        function validarDocumento() {
+            const documento = document.getElementById("documento").value;
+
+            if (documento.trim() === "") {
+                alert("Por favor, insira um CPF ou RG.");
+                return;
+            }
+
+            fetch("/validar", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/x-www-form-urlencoded"
+                },
+                body: `documento=${encodeURIComponent(documento)}`
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("modal-text").textContent = data.mensagem;
+                document.getElementById("modal").style.display = "flex";
+            })
+            .catch(error => console.error("Erro:", error));
+        }
+
+        function fecharModal() {
+            document.getElementById("modal").style.display = "none";
+        }
+    </script>
 </body>
 </html>
